Нарисовал UI главного окна. Логирование в logcat. Вывод Toast.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">BetterWeather</string>
     <string name="main_greeting">Hello from The Better Weather!</string>
+    <string name="main_part_of_day">Понедельник, день</string>
+    <string name="weather_now">+6°C</string>
+    <string name="humidity">Влажность 54%</string>
+    <string name="pressure">Давление 747 мм рт. ст.</string>
+    <string name="wind">Ветер 5,0 м/с, З</string>
 </resources>
