--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,16 @@
 <resources>
     <string name="app_name">BetterWeather</string>
-    <string name="main_part_of_day">Понедельник, день</string>
+    <string name="main_part_of_day">Monday, Day</string>
     <string name="main_weather_now">+6°C</string>
-    <string name="main_humidity">Влажность 54%</string>
-    <string name="main_pressure">Давление 747 мм рт. ст.</string>
-    <string name="main_wind">Ветер 5,0 м/с, З</string>
-    <string name="settings_hint_location_name">Город, например Москва</string>
-    <string name="settings_show_additional_info">Отображать доп. информацию</string>
-    <string name="image_weather_now_description">Солнечно</string>
-    <string name="button_refresh_description">Обновить</string>
-    <string name="button_settings_description">Настройки</string>
-    <string name="main_location_name">Барнаул</string>
-    <string name="main_activity_name">Погода, она такая</string>
-    <string name="settings_activity_name">Настройки</string>
+    <string name="main_humidity">Humidity 54%</string>
+    <string name="main_pressure">Pressure 747 mm Hg</string>
+    <string name="main_wind">Wind 5,0 m/s, W</string>
+    <string name="settings_hint_location_name">City, for example Moscow</string>
+    <string name="settings_show_additional_info">Display additional information</string>
+    <string name="image_weather_now_description">Sunny</string>
+    <string name="button_refresh_description">Refresh</string>
+    <string name="button_settings_description">Settings</string>
+    <string name="main_location_name">Barnaul</string>
+    <string name="main_activity_name">The Weather</string>
+    <string name="settings_activity_name">Settings</string>
 </resources>
