--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
     <string name="app_name">BetterWeather</string>
-    <string name="main_part_of_day">Monday, Day</string>
-    <string name="main_weather_now">+6°C</string>
-    <string name="main_humidity">Humidity 54%</string>
-    <string name="main_pressure">Pressure 747 mm Hg</string>
-    <string name="main_wind">Wind 5,0 m/s, W</string>
+    <string name="main_part_of_day">%1$s, %2$s</string>
+    <string name="main_weather_now">%1$s°C</string>
+    <string name="main_humidity">Humidity %1$s %%</string>
+    <string name="main_pressure">Pressure %1$s mm Hg</string>
+    <string name="main_wind">Wind %1$s m/s, %2$s</string>
     <string name="settings_hint_location_name">City, for example Moscow</string>
     <string name="settings_show_additional_info">Display additional information</string>
     <string name="image_weather_now_description">Sunny</string>
